src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIV
    DO
    DOWNTO
    ELSE
    ENDFOR
    ENDIF
    ENDWHILE
    EQ
    FOR
    FROM
    GEQ
    GT
    IF
    LEQ
    LT
    MINUS
    MOD
    MULT
    NEQ
    PLUS
    REPEAT
    THEN
    TO
    UNTIL
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARE declarations BEGIN commands END
Rule 2     program -> BEGIN commands END
Rule 3     declarations -> declarations COMMA ID
Rule 4     declarations -> declarations COMMA ID LBR NUM COLON NUM RBR
Rule 5     declarations -> ID
Rule 6     declarations -> ID LBR NUM COLON NUM RBR
Rule 7     commands -> commands command
Rule 8     commands -> command
Rule 9     command -> identifier ASSIGN expression SEMICOLON
Rule 10    command -> WRITE value SEMICOLON
Rule 11    command -> READ identifier SEMICOLON
Rule 12    expression -> value
Rule 13    value -> NUM
Rule 14    value -> identifier
Rule 15    identifier -> ID
Rule 16    identifier -> ID LBR ID RBR
Rule 17    identifier -> ID LBR NUM RBR

Terminals, with rules where they appear

ASSIGN               : 9
BEGIN                : 1 2
COLON                : 4 6
COMMA                : 3 4
DECLARE              : 1
DIV                  : 
DO                   : 
DOWNTO               : 
ELSE                 : 
END                  : 1 2
ENDFOR               : 
ENDIF                : 
ENDWHILE             : 
EQ                   : 
FOR                  : 
FROM                 : 
GEQ                  : 
GT                   : 
ID                   : 3 4 5 6 15 16 16 17
IF                   : 
LBR                  : 4 6 16 17
LEQ                  : 
LT                   : 
MINUS                : 
MOD                  : 
MULT                 : 
NEQ                  : 
NUM                  : 4 4 6 6 13 17
PLUS                 : 
RBR                  : 4 6 16 17
READ                 : 11
REPEAT               : 
SEMICOLON            : 9 10 11
THEN                 : 
TO                   : 
UNTIL                : 
WHILE                : 
WRITE                : 10
error                : 

Nonterminals, with rules where they appear

command              : 7 8
commands             : 1 2 7
declarations         : 1 3 4
expression           : 9
identifier           : 9 11 14
program              : 0
value                : 10 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARE declarations BEGIN commands END
    (2) program -> . BEGIN commands END

    DECLARE         shift and go to state 2
    BEGIN           shift and go to state 3

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARE . declarations BEGIN commands END
    (3) declarations -> . declarations COMMA ID
    (4) declarations -> . declarations COMMA ID LBR NUM COLON NUM RBR
    (5) declarations -> . ID
    (6) declarations -> . ID LBR NUM COLON NUM RBR

    ID              shift and go to state 5

    declarations                   shift and go to state 4

state 3

    (2) program -> BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . WRITE value SEMICOLON
    (11) command -> . READ identifier SEMICOLON
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    WRITE           shift and go to state 9
    READ            shift and go to state 10
    ID              shift and go to state 11

    commands                       shift and go to state 6
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 4

    (1) program -> DECLARE declarations . BEGIN commands END
    (3) declarations -> declarations . COMMA ID
    (4) declarations -> declarations . COMMA ID LBR NUM COLON NUM RBR

    BEGIN           shift and go to state 12
    COMMA           shift and go to state 13


state 5

    (5) declarations -> ID .
    (6) declarations -> ID . LBR NUM COLON NUM RBR

    BEGIN           reduce using rule 5 (declarations -> ID .)
    COMMA           reduce using rule 5 (declarations -> ID .)
    LBR             shift and go to state 14


state 6

    (2) program -> BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . WRITE value SEMICOLON
    (11) command -> . READ identifier SEMICOLON
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    END             shift and go to state 15
    WRITE           shift and go to state 9
    READ            shift and go to state 10
    ID              shift and go to state 11

    command                        shift and go to state 16
    identifier                     shift and go to state 8

state 7

    (8) commands -> command .

    END             reduce using rule 8 (commands -> command .)
    WRITE           reduce using rule 8 (commands -> command .)
    READ            reduce using rule 8 (commands -> command .)
    ID              reduce using rule 8 (commands -> command .)


state 8

    (9) command -> identifier . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 17


state 9

    (10) command -> WRITE . value SEMICOLON
    (13) value -> . NUM
    (14) value -> . identifier
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    NUM             shift and go to state 19
    ID              shift and go to state 11

    value                          shift and go to state 18
    identifier                     shift and go to state 20

state 10

    (11) command -> READ . identifier SEMICOLON
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    ID              shift and go to state 11

    identifier                     shift and go to state 21

state 11

    (15) identifier -> ID .
    (16) identifier -> ID . LBR ID RBR
    (17) identifier -> ID . LBR NUM RBR

    ASSIGN          reduce using rule 15 (identifier -> ID .)
    SEMICOLON       reduce using rule 15 (identifier -> ID .)
    LBR             shift and go to state 22


state 12

    (1) program -> DECLARE declarations BEGIN . commands END
    (7) commands -> . commands command
    (8) commands -> . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . WRITE value SEMICOLON
    (11) command -> . READ identifier SEMICOLON
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    WRITE           shift and go to state 9
    READ            shift and go to state 10
    ID              shift and go to state 11

    commands                       shift and go to state 23
    command                        shift and go to state 7
    identifier                     shift and go to state 8

state 13

    (3) declarations -> declarations COMMA . ID
    (4) declarations -> declarations COMMA . ID LBR NUM COLON NUM RBR

    ID              shift and go to state 24


state 14

    (6) declarations -> ID LBR . NUM COLON NUM RBR

    NUM             shift and go to state 25


state 15

    (2) program -> BEGIN commands END .

    $end            reduce using rule 2 (program -> BEGIN commands END .)


state 16

    (7) commands -> commands command .

    END             reduce using rule 7 (commands -> commands command .)
    WRITE           reduce using rule 7 (commands -> commands command .)
    READ            reduce using rule 7 (commands -> commands command .)
    ID              reduce using rule 7 (commands -> commands command .)


state 17

    (9) command -> identifier ASSIGN . expression SEMICOLON
    (12) expression -> . value
    (13) value -> . NUM
    (14) value -> . identifier
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    NUM             shift and go to state 19
    ID              shift and go to state 11

    identifier                     shift and go to state 20
    expression                     shift and go to state 26
    value                          shift and go to state 27

state 18

    (10) command -> WRITE value . SEMICOLON

    SEMICOLON       shift and go to state 28


state 19

    (13) value -> NUM .

    SEMICOLON       reduce using rule 13 (value -> NUM .)


state 20

    (14) value -> identifier .

    SEMICOLON       reduce using rule 14 (value -> identifier .)


state 21

    (11) command -> READ identifier . SEMICOLON

    SEMICOLON       shift and go to state 29


state 22

    (16) identifier -> ID LBR . ID RBR
    (17) identifier -> ID LBR . NUM RBR

    ID              shift and go to state 30
    NUM             shift and go to state 31


state 23

    (1) program -> DECLARE declarations BEGIN commands . END
    (7) commands -> commands . command
    (9) command -> . identifier ASSIGN expression SEMICOLON
    (10) command -> . WRITE value SEMICOLON
    (11) command -> . READ identifier SEMICOLON
    (15) identifier -> . ID
    (16) identifier -> . ID LBR ID RBR
    (17) identifier -> . ID LBR NUM RBR

    END             shift and go to state 32
    WRITE           shift and go to state 9
    READ            shift and go to state 10
    ID              shift and go to state 11

    command                        shift and go to state 16
    identifier                     shift and go to state 8

state 24

    (3) declarations -> declarations COMMA ID .
    (4) declarations -> declarations COMMA ID . LBR NUM COLON NUM RBR

    BEGIN           reduce using rule 3 (declarations -> declarations COMMA ID .)
    COMMA           reduce using rule 3 (declarations -> declarations COMMA ID .)
    LBR             shift and go to state 33


state 25

    (6) declarations -> ID LBR NUM . COLON NUM RBR

    COLON           shift and go to state 34


state 26

    (9) command -> identifier ASSIGN expression . SEMICOLON

    SEMICOLON       shift and go to state 35


state 27

    (12) expression -> value .

    SEMICOLON       reduce using rule 12 (expression -> value .)


state 28

    (10) command -> WRITE value SEMICOLON .

    END             reduce using rule 10 (command -> WRITE value SEMICOLON .)
    WRITE           reduce using rule 10 (command -> WRITE value SEMICOLON .)
    READ            reduce using rule 10 (command -> WRITE value SEMICOLON .)
    ID              reduce using rule 10 (command -> WRITE value SEMICOLON .)


state 29

    (11) command -> READ identifier SEMICOLON .

    END             reduce using rule 11 (command -> READ identifier SEMICOLON .)
    WRITE           reduce using rule 11 (command -> READ identifier SEMICOLON .)
    READ            reduce using rule 11 (command -> READ identifier SEMICOLON .)
    ID              reduce using rule 11 (command -> READ identifier SEMICOLON .)


state 30

    (16) identifier -> ID LBR ID . RBR

    RBR             shift and go to state 36


state 31

    (17) identifier -> ID LBR NUM . RBR

    RBR             shift and go to state 37


state 32

    (1) program -> DECLARE declarations BEGIN commands END .

    $end            reduce using rule 1 (program -> DECLARE declarations BEGIN commands END .)


state 33

    (4) declarations -> declarations COMMA ID LBR . NUM COLON NUM RBR

    NUM             shift and go to state 38


state 34

    (6) declarations -> ID LBR NUM COLON . NUM RBR

    NUM             shift and go to state 39


state 35

    (9) command -> identifier ASSIGN expression SEMICOLON .

    END             reduce using rule 9 (command -> identifier ASSIGN expression SEMICOLON .)
    WRITE           reduce using rule 9 (command -> identifier ASSIGN expression SEMICOLON .)
    READ            reduce using rule 9 (command -> identifier ASSIGN expression SEMICOLON .)
    ID              reduce using rule 9 (command -> identifier ASSIGN expression SEMICOLON .)


state 36

    (16) identifier -> ID LBR ID RBR .

    ASSIGN          reduce using rule 16 (identifier -> ID LBR ID RBR .)
    SEMICOLON       reduce using rule 16 (identifier -> ID LBR ID RBR .)


state 37

    (17) identifier -> ID LBR NUM RBR .

    ASSIGN          reduce using rule 17 (identifier -> ID LBR NUM RBR .)
    SEMICOLON       reduce using rule 17 (identifier -> ID LBR NUM RBR .)


state 38

    (4) declarations -> declarations COMMA ID LBR NUM . COLON NUM RBR

    COLON           shift and go to state 40


state 39

    (6) declarations -> ID LBR NUM COLON NUM . RBR

    RBR             shift and go to state 41


state 40

    (4) declarations -> declarations COMMA ID LBR NUM COLON . NUM RBR

    NUM             shift and go to state 42


state 41

    (6) declarations -> ID LBR NUM COLON NUM RBR .

    BEGIN           reduce using rule 6 (declarations -> ID LBR NUM COLON NUM RBR .)
    COMMA           reduce using rule 6 (declarations -> ID LBR NUM COLON NUM RBR .)


state 42

    (4) declarations -> declarations COMMA ID LBR NUM COLON NUM . RBR

    RBR             shift and go to state 43


state 43

    (4) declarations -> declarations COMMA ID LBR NUM COLON NUM RBR .

    BEGIN           reduce using rule 4 (declarations -> declarations COMMA ID LBR NUM COLON NUM RBR .)
    COMMA           reduce using rule 4 (declarations -> declarations COMMA ID LBR NUM COLON NUM RBR .)

